add shop handlers
